App(terminal) is just about ready
The command line  application for calculating medium-voltage, three-phase AC voltage drop is now ready.

GUI for search cable id added

Terminal app Release Candidate 1 - v0.0.1-RC1

Terminal app Release Candidate 2 - v0.0.1-RC2

Terminal app Release Candidate 3 - v0.0.1-RC3

--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,18 @@ Thumbs.db
 *.mov
 *.wmv
 
+# Trash folders
+trash/
+
+# Excel Backup files
+*.xlxs#
+
 # My trash folders
 old_code/
 
 # VSCODE settings folder
 .vscode/
+
+# Python enviroment folder
+.venv/
 
